--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
         <li class="nav"><a href="checklist.html">Checklist</a></li>
         <li class="nav"><a href="selfdefense.html">Self-Defense</a></li>
         <li class="nav"><a href="weaponry.html">Weaponry</a></li>
+        <li class="nav"><a href="index.html">Home</a></li>
         
         <h1>Home</h1>
         
