--- a/selfdefense.html
+++ b/selfdefense.html
@@ -21,6 +21,7 @@
       <ul class="nav-bar">
         <li class="nav"><a href="resources.html">Resources</a></li>
         <li class="nav"><a href="checklist.html">Checklist</a></li>
+        <li class="nav"><a href="selfdefense.html">Self-Defense</a></li>
         <li class="nav"><a href="weaponry.html">Weaponry</a></li>
         <li class="nav"><a href="index.html">Home</a></li>
         
