--- a/weaponry.html
+++ b/weaponry.html
@@ -20,6 +20,7 @@
         <li class="nav"><a href="resources.html">Resources</a></li>
         <li class="nav"><a href="checklist.html">Checklist</a></li>
         <li class="nav"><a href="selfdefense.html">Self-Defense</a></li>
+        <li class="nav"><a href="weaponry.html">Weaponry</a></li>
         <li class="nav"><a href="index.html">Home</a></li>
         
         <h1>Weaponry</h1>
